# parco

./: README  build_packages.sh  parco.cabal
Text/: Parco.hs
Text/Parco/: Expr.hs  Perm.hs
parco/: README
parco-attoparsec/: LICENSE  parco-attoparsec.cabal
parco-attoparsec/src/Text/Parco/: Attoparsec.hs
parco-parsec/: LICENSE  parco-parsec.cabal
parco-parsec/src/Text/Parco/: Parsec.hs
parco/src/Text/: Parco.hs
parco/src/Text/Parco/: Expr.hs  Perm.hs  Test.hs
